[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cocapn-colora"
version = "0.2.0"
description = "Multi-modal color theory engine — palette generation and visual identity for fleet agents"
readme = "README.md"
license = "MIT"
requires-python = ">=3.8"
authors = [{name = "Cocapn"}]
keywords = ["cocapn", "fleet", "agent"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/SuperInstance/cocapn-colora"

[tool.setuptools.packages.find]
where = ["src"]
